# pokemap

./: .gitignore  LICENSE  Setup.hs  pokemap.cabal
data/: Makefile  checkerboard.blocks  test.blocks.m4  testBlocks
src/: Block.hs  Main.hs  Maze.hs
