name: pokemap
version: 0.1
license: MIT
license-file: LICENSE
author: Julian Blake Kongslie
maintainer: jblake@omgwallhack.org
build-type: Simple
cabal-version: >=1.8

executable pokemap
  main-is: Main.hs
  build-depends: array, base, deepseq, monads-tf, MonadRandom, parsec, random, random-shuffle, transformers
  hs-source-dirs: src
  ghc-options: -fprof-auto -fprof-cafs -rtsopts -Wall
