author: Julian Blake Kongslie
build-type: Simple
cabal-version: >=1.8
data-dir: data
data-files: *.blocks
license-file: LICENSE
license: MIT
maintainer: jblake@omgwallhack.org
name: pokemap
version: 0.1

executable pokemap
  build-depends:
    array,
    base,
    deepseq,
    MonadRandom,
    monads-tf,
    parsec,
    random,
    random-shuffle,
    transformers
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Block,
    Maze,
    Paths_pokemap

source-repository head
  type: git
  location: git://github.com/jblake/pokemap.git
  branch: master
